--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -6,38 +6,37 @@
     align-items: center;
 }
 
-.logo {
-    color: var(--logo-color);
-}
-
-.img-and-name {
-    display: flex;
-    align-items: center;
-}
-
 .name {
-    font-weight: 600;
-    color: var(--logo-color);
+    font-weight: bold;
+    
 }
 
-img {
-    border-radius: 50%;
-    height: 45px;
-    margin-left: 16px;
+.right-section {
+    display: flex;
+    gap: 16px;
+    font-weight: normal;
 }
 
-.link {
-    color: var(--pry-color);
-    text-decoration: none;
-    font-weight: 600;
-    margin-right: 16px;
+li {
+    cursor: pointer;
 }
+
 
 
 /* Media Query */
-@media screen and (max-width: 550px) {
-    .name {
-        display: none;
+@media screen and (max-width: 700px) {
+    .navbar-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .img-and-name {
+        margin-left: 16px;
+    }
+
+    .right-section {
+        margin-top: 16px;
+        margin-left: 16px;
     }
 
 }
