--- a/src/assets/not-found.css
+++ b/src/assets/not-found.css
@@ -2,6 +2,7 @@
 
 .error-container {
   text-align: center;
+  margin: 0 auto;
 }
 
 h1 {
@@ -18,4 +19,5 @@ h1 {
   text-decoration: none;
   color: var(--pry-color);
   font-weight: bold;
+  text-decoration: underline;
 }
