--- a/src/assets/repositories.css
+++ b/src/assets/repositories.css
@@ -1,15 +1,30 @@
 @import url("../index.css");
 @import url("./profile.css");
 
+.repo-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 24px;
+}
+
+
+.holder-2 {
+  width: auto;
+  max-width: auto;
+}
 
 .heading-2 {
   color: var(--text-color);
   line-height: 26px;
+  cursor: default;
+
 }
 
 .description {
   margin-top: 20px;
   font-weight: normal;
+  cursor: default;
+
 }
 
 .repos-info {
@@ -17,33 +32,38 @@
   margin: 8px 0 16px;
   font-size: 14px;
   gap: 16px;
+  cursor: default;
 }
 
 .cta {
-  text-decoration: none;
   color: var(--pry-color);
   display: block;
-
 }
 
 .buttons {
-    margin-bottom: 72px;
-    display: flex;
-    gap: 8px;
+  margin-bottom: 72px;
+  display: flex;
+  gap: 8px;
 }
 
 Button {
-    background-color: var(--pry-color);
-    border: 1px solid var(--pry-color);
-    color: #fff;
-    padding: 8px 12px;
-    border-radius: 4px;
-    cursor: pointer;
+  border: 1px solid #161b22;
+  background-color: #161b22;
+  color: #fff;
+  padding: 12px 16px;
+  cursor: pointer;
 }
 
 Button:hover {
-    color: var(--pry-color-hover);
-    border: 1px solid var(--pry-color);
-    background-color: #fff;
-    padding: 8px 12px;
+  color: var(--pry-color-hover);
+  background-color: #161b22;
+  border: 1px solid #fff;
+
+}
+
+@media (max-width: 912px) {
+  .repo-list {
+    grid-template-columns: 1fr;
+    /* grid-template-rows: 1fr 1fr 1fr 1fr; */
+  }
 }
