--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
 html,
 body {
-    height: 100%;
-    width: 100%;
-    font-family: 'Inter', sans-serif;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-:root {
-  --pry-color: #2563EB;
-  --text-color: #242424;
-  --text-color-two: #606C80;
-  --logo-color: #475366;
-  --nav-text-color: #294566;
-  --border-color: #dddddd;
+  height: 100%;
+  width: 100%;
+  font-family: "Inter", sans-serif;
+  background-color: var(--bg-color);
 }
 
 *,
@@ -30,7 +14,21 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: var(--text-color);
+}
+
+:root {
+  --pry-color: #fff;
+  --bg-color: #0d1117;
+  --sec-color: #161b22;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: var(--pry-color);
 }
 
 .container {
@@ -38,10 +36,11 @@ body {
   height: 100%;
 }
 
-ul, ol, li {
+ul,
+ol,
+li {
   list-style: none;
 }
-
 
 @media screen and (max-width: 550px) {
   .container {
@@ -51,4 +50,3 @@ ul, ol, li {
     overflow: hidden;
   }
 }
-
